# V2AI_M25CSA010_M25CSA018

./: .coverage  .env.example  .env.local-python  .env.secrets.example  .env.server-docker  .gitignore  Makefile  README.md  SERVER_DEPLOY_COMMANDS.md  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  evaluate.yml
configs/: pipeline.yaml
data/evaluation/: eval_set.json
data/knowledge/: experiment_tracking.txt  github_strategy.txt  kubernetes_deployment.txt  langchain_context_flow.txt  monitoring_sop.txt
deploy/: MIGRATION_GUIDE.md  gcloud_deploy.sh
docker/: Dockerfile.api  Dockerfile.api.gpu  Dockerfile.mlflow  Dockerfile.ui  prometheus.yml
docker/grafana/dashboards/: v2ai.json
docs/: ARCHITECTURE_DIAGRAM.md  GITHUB_SETUP.md  LLM_CONTINUATION_HANDOFF_2026-04-21.md  LLM_READABLE_CONTEXT.md  PROJECT_FILE_MAP.md  PROPOSAL_ALIGNMENT.md  SERVER_SETUP.md  SOP.md  llm_handoff_context.md.resolved
k8s/: api-deployment-gpu.yaml  api-deployment.yaml  configmap.yaml  hpa-api.yaml  minio-deployment.yaml  minio-pvc.yaml  mlflow-deployment.yaml  mlflow-pvc.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  ui-deployment.yaml
scripts/: cleanup_sessions.py  deploy_server.sh  deploy_to_server.ps1  generate_test_lecture_video.py  process_video_session.py  run_full_pipeline.py  start_api_gpu.sh
src/app/: __init__.py  config.py
src/app/api/: main.py  schemas.py
src/app/db/: models.py  session.py
src/app/experiments/: __init__.py  (+3 more)
src/ui/: streamlit_app.py
tests/: test_api.py
(+13 files in other folders)
