[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-llmops-rag-project"
version = "0.1.0"
description = "End-to-end MLOps + LLMOps pipeline with Hugging Face, LangChain, MLflow, and Docker Compose"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/ui/*.py" = ["E501"]
"src/app/experiments/evaluate_rag.py" = ["E501", "I001"]
"src/app/services/langchain_context.py" = ["F841"]
"src/app/services/video_pipeline_service.py" = ["E501"]
"scripts/*.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
